force-app/main/default/objects/SLA_Breach_Event__e/SLA_Breach_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event emitted when an SLA threshold is breached.</description>
    <label>SLA Breach Event</label>
    <pluralLabel>SLA Breach Events</pluralLabel>
</CustomObject>