force-app/main/default/objects/SLA_Breach_Event__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case Id</label>
    <required>true</required>
    <type>Text</type>
    <length>18</length>
</CustomField>