force-app/main/default/objects/SLA_Breach_Event__e/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>Text</type>
    <length>255</length>
</CustomField>